--- a/src/components/note_list/note_list_component.scss
+++ b/src/components/note_list/note_list_component.scss
@@ -17,7 +17,7 @@
 	border: none;
 	border-radius: 0.5rem;
 	box-shadow: 0px 4px 4px 0 rgba(0, 0, 0, 0.35);
-	color: var(--text);
+	color: var(--btn-on-color-text);
 	cursor: pointer;
 	outline: none;
 	padding: 1rem;
