--- a/src/components/servers/add/servers_add_component.scss
+++ b/src/components/servers/add/servers_add_component.scss
@@ -42,7 +42,7 @@
             background-color: #2e7d32;
             border: none;
             border-radius: 0.25em;
-            color: var(--text);
+            color: var(--btn-on-color-text);
             cursor: pointer;
             font-size: 1em;
             font-weight: 600;
@@ -55,7 +55,7 @@
             background-color: var(--btn-grey-color);
             border: none;
             border-radius: 0.25em;
-            color: var(--text);
+            color: var(--btn-on-color-text);
             cursor: pointer;
             font-size: 1em;
             outline: none;
