--- a/src/components/servers/edit/servers_edit_component.scss
+++ b/src/components/servers/edit/servers_edit_component.scss
@@ -42,7 +42,7 @@
             background-color: var(--btn-blue-color);
             border: none;
             border-radius: 0.25em;
-            color: var(--text);
+            color: var(--btn-on-color-text);
             cursor: pointer;
             font-size: 1em;
             outline: none;
@@ -54,7 +54,7 @@
             background-color: var(--btn-grey-color);
             border: none;
             border-radius: 0.25em;
-            color: var(--text);
+            color: var(--btn-on-color-text);
             cursor: pointer;
             font-size: 1em;
             outline: none;
