--- a/src/components/servers/settings/servers_settings_component.scss
+++ b/src/components/servers/settings/servers_settings_component.scss
@@ -42,7 +42,7 @@
         background-color: #2e7d32;
         border: none;
         border-radius: 0.25rem;
-        color: var(--text);
+        color: var(--btn-on-color-text);
         cursor: pointer;
         flex: 1;
         font-size: 1rem;
@@ -57,7 +57,7 @@
         background-color: #4a148c;
         border: none;
         border-radius: 0.25rem;
-        color: var(--text);
+        color: var(--btn-on-color-text);
         cursor: pointer;
         font-size: 1rem;
         font-weight: 600;
@@ -71,7 +71,7 @@
         background-color: #1565c0;
         border: none;
         border-radius: 0.25rem;
-        color: var(--text);
+        color: var(--btn-on-color-text);
         cursor: pointer;
         font-size: 1rem;
         font-weight: 600;
@@ -86,7 +86,7 @@
         background-color: var(--btn-grey-color);
         border: none;
         border-radius: 0.25rem;
-        color: var(--text);
+        color: var(--btn-on-color-text);
         cursor: pointer;
         font-size: 1rem;
         outline: none;
@@ -181,7 +181,7 @@
         background-color: #2e7d32;
         border: none;
         border-radius: 0.25rem;
-        color: var(--text);
+        color: var(--btn-on-color-text);
         cursor: pointer;
         font-size: 0.8rem;
         font-weight: 600;
@@ -196,7 +196,7 @@
         background-color: var(--btn-red-color);
         border: none;
         border-radius: 0.25rem;
-        color: var(--text);
+        color: var(--btn-on-color-text);
         cursor: pointer;
         font-size: 0.8rem;
         outline: none;
